# singularity-calculator

./: CONTRIBUTING.md  README.md  meson.build
data/: dev.sinty.calculator.desktop  dev.sinty.calculator.json
resources/: dev.sinty.calculator.gresource.xml
src/: main.vala
ui/: main.vetro  meson.build
