project('singularity-calculator', ['vala', 'c'],
  version: '0.1.0',
  meson_version: '>= 0.59.0'
)

gnome = import('gnome')

gtk_dep            = dependency('gtk4')
gee_dep            = dependency('gee-0.8')

libsingularity_dep = dependency('singularity-1.0', 
  fallback: ['libsingularity', 'libsingularity_dep']
)

if not meson.is_subproject() and libsingularity_dep.type_name() == 'internal'
  libsingularity_vapi_dir = join_paths(meson.project_build_root(), 'subprojects', 'libsingularity')
  add_project_arguments(['--vapidir=' + libsingularity_vapi_dir], language: 'vala')
endif
math_dep           = meson.get_compiler('c').find_library('m')

# Compile .vetro to .ui in the ui/ subdirectory
subdir('ui')

resources = gnome.compile_resources(
  'singularity-calculator-resources',
  'resources/dev.sinty.calculator.gresource.xml',
  source_dir: [meson.current_source_dir(), meson.current_build_dir()],
  dependencies: main_ui
)

executable('singularity-calculator',
  ['src/main.vala', resources],
  dependencies: [gtk_dep, gee_dep, libsingularity_dep, math_dep],
  install: true
)

install_data('data/dev.sinty.calculator.desktop',
  install_dir: get_option('datadir') / 'applications'
)

install_data('data/dev.sinty.calculator.json',
  install_dir: get_option('datadir') / 'singularity' / 'app-settings'
)

install_data('data/icons/dev.sinty.calculator.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps'
)
